{{$NEXT}}
  - Add params, param_names, param, and param_array general request parameter accessors

0.018     2021-05-19 18:12:06 EDT
  - CGI::Tiny::Multipart::parse_multipart_form_data now takes a single tempfiles option instead of all_tempfiles and no_tempfiles

0.017     2021-05-19 01:41:51 EDT
  - Split multipart/form-data parser into CGI::Tiny::Multipart module, which is reusable and only loaded if needed
  - Add set_discard_form_files method

0.016     2021-05-05 21:31:12 EDT
  - Add CGI::Tiny::escape_html convenience function

0.015     2021-05-05 01:57:53 EDT
  - Add debugging commands for commandline convenience
  - Ignore response content passed to render and render_chunk in HEAD requests
  - Omit autodetected Content-Type header when rendering empty fixed-length responses

0.014     2021-05-04 03:26:46 EDT
  - Remove headers_rendered method, instead pass rendered status to error handlers

0.013     2021-05-03 23:32:56 EDT
  - Skip tests that don't work on Windows
  - Rendering a redirect will now set the response status to 302 if any non-300 status was set
  - Exceptions and failure to render now set a 500 response status unless any error status was set

0.012     2021-05-02 23:28:28 EDT
  - Remove set_response_fixed_length
  - render now always sets a Content-Length and can only be called once
  - Add render_chunk method which can be used instead of render for chunked content
  - set_nph now sets a true value if called without a value
  - Gracefully handle premature exit before the cgi block
  - Exceptions no longer cause the response status to default to 500 unless the error handler doesn't render anything

0.011     2021-04-29 02:12:59 EDT
  - Rename set_response_content_type and set_response_content_disposition to set_response_type and set_response_disposition
  - Add set_response_fixed_length method

0.010     2021-04-28 23:14:59 EDT
  - Replace set_response_download method with set_response_content_disposition
  - Add reset_response_headers method
